<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="Favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name ="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="action_sort">Sort</string>
    <string name="book_hub">BOOK HUB</string>
    <string name="version_1_0">VERSION 1.0</string>
    <string name="copyright_2020">COPYRIGHT 2020</string>
    <string name="gurmehar_singh">Gurmehar Singh</string>
    <string name="gurmeharsingh200_gmail_com">gurmeharsingh200@gmail.com</string>
</resources>
